--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CPP</string>
-    <string name="entry_title_text">comercializadora de productos</string>
+    <string name="app_name">CCP</string>
+    <string name="entry_title_text">Comercializadora de productos</string>
     <string name="sign_in_text">Ingresar</string>
 </resources>
