--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CCP</string>
     <string name="entry_title_text">Comercializadora de productos</string>
     <string name="sign_in_text">Ingresar</string>
+    <string name="email_text">Correo</string>
 </resources>
