[CPF-148] entry screen (#2)
* Add color definitions, rename MainActivity to EntryActivity, and create the EntryActivity UI

* Refactor project namespace from 'cpp' to 'ccp', update theme names, and implement navigation structure with Login and Register screens

* Add Screen to build.gradle.kts exclusions for test and UI components

* Add Composable exclusion to build.gradle.kts and enhance code coverage reporting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">CPP</string>
+    <string name="app_name">CCP</string>
+    <string name="entry_title_text">Comercializadora de productos</string>
+    <string name="sign_in_text">Ingresar</string>
 </resources>
