--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">CCP</string>
     <string name="entry_title_text">Comercializadora de productos</string>
     <string name="sign_in_text">Ingresar</string>
+    <string name="email_text">Correo</string>
+    <string name="password_text">Contraseña</string>
+    <string name="access_text">Acceder</string>
+    <string name="invalid_email_text">Correo inválido</string>
+    <string name="invalid_credentials_text">Credenciales inválidas</string>
+    <string name="min_password_chars_text">Debe tener al menos 6 caracteres</string>
+
+<!--    Error messages-->
+    <string name="login_error_message">Error al iniciar sesión</string>
+
 </resources>
