--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,15 @@
     <string name="personal_info_city">Ciudad</string>
     <string name="personal_info_contact">Contacto</string>
     <string name="not_available_short">N/A</string>
+
+    <!--    Recommendation-->
+    <string name="recommendations_title">Recomendaciones</string>
+    <string name="record_video_desc">Grabar vídeo</string>
+    <string name="record_store_prompt">Pulsa para grabar un vídeo de la tienda</string>
+    <string name="video_name_label">Nombre del vídeo</string>
+    <string name="delete">Eliminar</string>
+    <string name="cancel">Cancelar</string>
+    <string name="receive_recommendation">Recibir Recomendación</string>
+    <string name="confirm_delete_title">Confirmar Eliminación</string>
+    <string name="confirm_delete_message">¿Estás seguro de que quieres eliminar este vídeo?</string>
 </resources>
