--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -118,4 +118,13 @@
     <string name="receive_recommendation">Recibir Recomendación</string>
     <string name="confirm_delete_title">Confirmar Eliminación</string>
     <string name="confirm_delete_message">¿Estás seguro de que quieres eliminar este vídeo?</string>
+
+    <string name="visits_title">Visitas</string>
+    <string name="register_visit_button">Registrar Visita</string>
+    <string name="no_visits_yet">Aún no hay visitas registradas para este cliente.</string>
+    <string name="visit_date_label">Fecha de Visita</string>
+    <string name="visit_observations_label">Observaciones</string>
+    <string name="visit_completed_button">Visita Completada</string>
+    <string name="delete_visit_content_description">Eliminar visita</string>
+    <string name="back_button">Volver</string>
 </resources>
